return dropdown icons to mobile view/adjust size to fix spacing issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -334,7 +334,9 @@ section {
   /* hide nav icons */
 
   .dropdown-icon {
-    display: none;
+    font-size: 18px;
+    top: 1px;
+    right: 1px;
   }
   
   .user-icon {
